// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`File > should render correctly fail status 1`] = `
<li
  class="HvFile-root"
>
  <div
    class="HvFile-icon e6pb7kb8 css-1x1xcvg-StyledFail"
    name="Fail"
  >
    <svg
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="color0"
        d="M7.5 4.001h1v6h-1zm0 8h1v-1h-1zM16 8a8 8 0 1 0-8 8 8 8 0 0 0 8-8zm-1 0a7 7 0 1 1-7-7 7 7 0 0 1 7 7z"
        fill="var(--uikit-colors-sema4)"
      />
    </svg>
  </div>
  <label
    class="HvFile-nameText e6pb7kb3 HvTypography-root HvTypography-label css-1khzaxq-getStyledComponent-StyledNameText e1tnpalo0"
  >
    somefile.png
  </label>
  <span
    class="HvFile-progressTextContainer css-5aquur-StyledProgressTextContainer e6pb7kb2"
  >
     | 
    <p
      class="HvFile-fail e6pb7kb6 HvTypography-root HvTypography-body css-19ioj9p-getStyledComponent-StyledErrorMessage e1tnpalo0"
    >
      File type not allowed for upload
    </p>
  </span>
  <button
    aria-label="removeFileButtonLabel"
    class="HvFile-removeButton e6pb7kb0 HvButton-root css-jjk7b2-StyledButton-StyledIconButton e138pvrm0"
  >
    <div
      class="css-1nxr552-StyledContentDiv e138pvrm3"
    >
      <span
        class="css-1o4qkkz-StyledChildren e138pvrm1"
      >
        <div
          class="css-f95wjz"
          name="Close"
        >
          <svg
            focusable="false"
            height="12"
            viewBox="0 0 16 16"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="color0"
              d="m8.7 8 5.3 5.3-.7.7L8 8.7 2.7 14l-.7-.7L7.3 8 2 2.7l.7-.7L8 7.3 13.3 2l.7.7z"
              fill="var(--uikit-colors-acce1)"
            />
          </svg>
        </div>
      </span>
    </div>
  </button>
</li>
`;

exports[`File > should render correctly success status 1`] = `
<li
  class="HvFile-root"
>
  <div
    class="HvFile-icon e6pb7kb9 css-13ouzip-StyledSuccess"
    name="Success"
  >
    <svg
      focusable="false"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="color0"
        d="M6.387 12 4 9.613l.707-.707 1.613 1.613 4.65-5.58.768.641zM8 15a6.953 6.953 0 0 1-4.943-2.057A7.023 7.023 0 1 1 8 15m8-7a8 8 0 1 0-8 8 8 8 0 0 0 8-8z"
        fill="var(--uikit-colors-sema1)"
      />
    </svg>
  </div>
  <label
    class="HvFile-nameText e6pb7kb3 HvTypography-root HvTypography-label css-1khzaxq-getStyledComponent-StyledNameText e1tnpalo0"
  >
    somefile.png
  </label>
  <span
    class="HvFile-progressTextContainer css-5aquur-StyledProgressTextContainer e6pb7kb2"
  >
     | 
    <p
      class="HvTypography-root HvTypography-body css-1fbl1cl-getStyledComponent e1tnpalo0"
    >
      875.00B
    </p>
  </span>
  <button
    aria-label="removeFileButtonLabel"
    class="HvFile-removeButton e6pb7kb0 HvButton-root css-jjk7b2-StyledButton-StyledIconButton e138pvrm0"
  >
    <div
      class="css-1nxr552-StyledContentDiv e138pvrm3"
    >
      <span
        class="css-1o4qkkz-StyledChildren e138pvrm1"
      >
        <div
          class="css-f95wjz"
          name="Close"
        >
          <svg
            focusable="false"
            height="12"
            viewBox="0 0 16 16"
            width="12"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="color0"
              d="m8.7 8 5.3 5.3-.7.7L8 8.7 2.7 14l-.7-.7L7.3 8 2 2.7l.7-.7L8 7.3 13.3 2l.7.7z"
              fill="var(--uikit-colors-acce1)"
            />
          </svg>
        </div>
      </span>
    </div>
  </button>
</li>
`;
